--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ LED1_OFF!</button>
 
 <script>
 et=document.getElementById("led 1");
-console.log('hola');
+console.log('__________------prueba-----________');
 function myFunction() {
   
 }
