--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@ function updateLed(led,val){
 
 document.getElementById("led 1").innerText=val;
 }
+  
+ <center><a href="http://www.websmultimedia.com/contador-de-visitas-gratis" title="Contador De Visitas Gratis">
+<img style="border: 0px solid; display: inline;" alt="contador de visitas" src="http://www.websmultimedia.com/contador-de-visitas.php?id=276631"></a><br><a href='http://www.websmultimedia.com/contador-de-visitas-gratis'>Contador de visitas</a><br><a href='http://www.websmultimedia.com/diseno-logotipos'>diseño de logo</a></center> 
+  
 </script>
 </body>
 </html>
