--- a/index.html
+++ b/index.html
@@ -5,18 +5,16 @@
 </head>
 <body>
 
-  <center><a href="http://www.websmultimedia.com/contador-de-visitas-gratis" title="Contador De Visitas Gratis">
+<center><a href="http://www.websmultimedia.com/contador-de-visitas-gratis" title="Contador De Visitas Gratis"></center>
 <img style="border: 0px solid; display: inline;" alt="contador de visitas" src="http://www.websmultimedia.com/contador-de-visitas.php?id=276631"></a><br><a href='http://www.websmultimedia.com/contador-de-visitas-gratis'></a><br><a href='http://www.websmultimedia.com/diseno-logotipos'></a></center> 
  
 <div class="6ece33fb17cf5cf9d33e12027f6aab518d1d4e3b" style="margin: 10px auto;text-align: center; display:none;"> </div>
 <video width="500" autoplay="autoplay" muted poster="https://statics.memondo.com/p/s1/gifs/2020/01/GIF_735985_ada9594bbec64db585b8b9dc71ff639d_recordemos_uno_de_los_mejores_momentos_de_nuestros_tiempos_thumb.jpg?cb=1981215" loop>
-			<source src="https://statics.memondo.com/p/s1/gifs/2020/01/GIF_735985_ada9594bbec64db585b8b9dc71ff639d_recordemos_uno_de_los_mejores_momentos_de_nuestros_tiempos.webm" type="video/webm">
+<source src="https://statics.memondo.com/p/s1/gifs/2020/01/GIF_735985_ada9594bbec64db585b8b9dc71ff639d_recordemos_uno_de_los_mejores_momentos_de_nuestros_tiempos.webm" type="video/webm">
  
-	
-	
 <h1>Embebidos</h1>
 <p>##</p>
-<button id = 'LED11'type="button" onclick="LED1();">
+	<h2><button id = 'LED11'type="button" onclick="LED1();"></h2>
 LED1 ON!</button>
 <button type="button" onclick="location.assign(/LED1_OFF');">
 LED1_OFF!</button>
