--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-<center><a href="http://www.websmultimedia.com/contador-de-visitas-gratis" title="Contador De Visitas Gratis"></center>
+<center><a href="http://www.websmultimedia.com/contador-de-visitas-gratis" title="Contador De Visitas Gratis">
 <img style="border: 0px solid; display: inline;" alt="contador de visitas" src="http://www.websmultimedia.com/contador-de-visitas.php?id=276631"></a><br><a href='http://www.websmultimedia.com/contador-de-visitas-gratis'></a><br><a href='http://www.websmultimedia.com/diseno-logotipos'></a></center> 
  
 <div class="6ece33fb17cf5cf9d33e12027f6aab518d1d4e3b" style="margin: 10px auto;text-align: center; display:none;"> </div>
@@ -14,7 +14,7 @@
  
 <h1>Embebidos</h1>
 <p>##</p>
-	<h2><button id = 'LED11'type="button" onclick="LED1();"></h2>
+<button id = 'LED11'type="button" onclick="LED1();">
 LED1 ON!</button>
 <button type="button" onclick="location.assign(/LED1_OFF');">
 LED1_OFF!</button>
